@@ -47,6 +47,7 @@ if (!defined('IS_ADMIN_FLAG')) {
     $zm_contents[] = array('text' => zm_l10n_get("Static Page Editor"), 'link' => $toolbox->admin->url('static_page_editor', '', true));
     $zm_contents[] = array('text' => zm_l10n_get("EZPage Manager"), 'link' => $toolbox->admin->url('ezpages', '', true));
     $zm_contents[] = array('text' => zm_l10n_get("About"), 'link' => $toolbox->admin->url('about', '', true));
+    $zm_contents[] = array('text' => zm_l10n_get("New Admin (Experimental)"), 'link' => '../zenmagick/apps/admin/web/');
     echo zen_draw_admin_box($zm_heading, $zm_contents);
 
     $pluginItems = ZMAdminMenu::getItemsForParentId(ZMAdminMenu::MENU_PLUGINS);
