@@ -23,6 +23,7 @@ zenmagick.mvc.html.charset: utf-8
 
 zenmagick.mvc.sacs.handler: AdminUserSacsHandler
 
-zenmagick.mvc.request.index: zm.php
+#zenmagick.mvc.request.index: zm.php
+zenmagick.mvc.request.index: index.php
 
 zenmagick.mvc.toolbox.tools: net:ToolboxNet,html:ToolboxHtml,form:ToolboxForm,macro:ToolboxMacro,locale:ToolboxLocale,utils:ToolboxUtils,admin:ToolboxAdmin,admin2:ToolboxAdmin2
