@@ -25,7 +25,8 @@
 # BEGIN real-path seo rewrite
 <IfModule mod_rewrite.c>
 RewriteEngine on
-RewriteBase /
+## adjust
+#RewriteBase /zenmagick/apps/admin/web
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . index.php [L]
